# WebsiteInC

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  main.c
assets/: blog_1.html  blogs.html  home.html  index.html  style.css
lib/: CMakeLists.txt  sample.c  sample.h
lib/file_reader/: CMakeLists.txt  file_reader.c  file_reader.h
lib/router/: CMakeLists.txt  router.c  router.h
lib/routes/: CMakeLists.txt  routes.c  routes.h
lib/server/: CMakeLists.txt  server.c  server.h
